add redis and configuration and add to consumer

--- a/src/LeaderBoard/appsettings.Development.json
+++ b/src/LeaderBoard/appsettings.Development.json
@@ -9,5 +9,8 @@
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "ConnectionStrings": {
+    "RedisConnection" : "localhost:6379"
   }
 }
